# Algorithm_asignment_2

./: .gitignore  README.md  SOLUTION.MD  WHOAMI.MD  messaging.py  messaging.pyi  network.py  network.pyi  person.py  person.pyi  protocols.pyi  registry.py  registry.pyi  requirements.txt  setup.cfg
