[metadata]
name = ADSIIAssignmentII
version = 0.0.2
author = Alessio Gambi @IMC FH KREMS
description = ADSII Assignment II
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent


[mypy]
check_untyped_defs = true
ignore_missing_imports = true
exclude = venv